--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@preact/preset-vite": "^2.8.1",
     "bootstrap": "^5.3.2",
-    "preact": "^10.19.3"
+    "preact": "^10.19.3",
+    "yjs": "^13.6.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.1",
