add y-websocket code to server

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,18 @@
   "author": "Max Nötzold",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.16",
+    "@types/ws": "^8.5.10",
     "nodemon": "^3.0.3",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.4.1",
+    "lodash": "^4.17.21",
+    "ws": "^8.16.0",
+    "y-mongodb-provider": "^0.1.8",
+    "y-websocket": "^1.5.3",
+    "yjs": "^13.6.11"
   }
 }
