--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,15 @@
 {
   "name": "y-todo-backend",
   "version": "1.0.0",
-  "description": "",
   "type": "module",
+  "author": "max.noetzold@gmail.com",
+  "license": "MIT",
   "main": "./src/server.ts",
   "scripts": {
     "build": "rm -rf dist && npx tsc",
     "start": "node dist/server.js",
     "dev": "nodemon --watch ./src -e ts --exec 'npm run build && npm run start'"
   },
-  "author": "Max Nötzold",
-  "license": "ISC",
   "devDependencies": {
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.16",
