--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,13 @@
 {
   "name": "y-todo-backend",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "author": "max.noetzold@gmail.com",
   "license": "MIT",
   "main": "./src/server.ts",
   "scripts": {
-    "build": "rm -rf dist && npx tsc",
-    "start": "node dist/server.js",
-    "dev": "nodemon --watch ./src -e ts --exec 'npm run build && npm run start'"
+    "start": "node src/server.js",
+    "dev": "nodemon --watch ./src --exec 'npm run start'"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
