move commonjs backend in own folder

--- a/backend/commonjs/package.json
+++ b/backend/commonjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "y-todo-backend",
+  "name": "y-todo-backend-commonjs",
   "version": "1.0.0",
   "type": "commonjs",
   "author": "max.noetzold@gmail.com",
