update backend server names

--- a/backend/esm/package.json
+++ b/backend/esm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "y-todo-backend",
+  "name": "y-todo-backend-esm",
   "version": "1.0.0",
   "type": "module",
   "author": "max.noetzold@gmail.com",
