--- a/backend/rollup/package.json
+++ b/backend/rollup/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "y-todo-backend",
+  "name": "y-todo-backend-rollup",
   "version": "1.0.0",
   "author": "max.noetzold@gmail.com",
   "license": "MIT",
